# bookstore

./: Dockerfile  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/tests_viewsets/: test_order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/tests/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_product_viewset.py
product/viewsets/: product_viewset.py
